# mini-yonku-wgp2-kr

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
8pt_font/: font-007242d37349daf3_glyph_map.json
assets/: README.md
docs/: 01-media-survey.md  02-text-survey.md  03-font-survey.md  04-dialogue-encoding.md  05-poc-hangul-font.md  06-dialogue-extraction.md  07-dialogue-completeness.md  08-adventure-text-engine.md  09-textbox-clip-investigation.md  10-graphics-assets.md  11-sjis-menu.md  12-sjis-ui-hangul.md  13-adventure-reverted-scenes.md  14-position-preserving-translation.md  15-shortening-ledger.md  16-reverse-engineering-mcp.md  17-stage-title-localization.md  18-menu-tile-font-labels.md  19-menu4-context-font.md  19-worldmap-quiz-text.md  20-field-npc-hidden-records.md  20-manual-setting-xmenu-handoff.md  21-field-position-preserving-translation.md  22-shortened-translation-comparison.md  23-worldmap-quiz-audit.md  24-ending-credits-analysis.md  README.md
scripts/: README.md  adv_codec.py  adv_extract.py  adv_poc_size.py  adv_scene.py  adv_vm_map.py  analyze_result_trace.py  apply_field_batch.py  apply_field_byte_fit.py  apply_field_fit.py  apply_shorten.py  audit_field_position.py  build_adv.py  build_adv_parts.py  build_adv_poc.py  build_all.py  build_catalog.py  build_credit_kr.py  build_ending_credits.py  build_ending_logo.py  build_field.py  build_gfx.py  build_integrated.py  build_intermission_logo.py  build_manual_workshops.py  build_menu.py  build_menu4_reclean.py  build_patch.py  build_pause_menu.py  build_race_hud_labels.py  (+64 more)
(+132 files in other folders)
