[package]
name = "kr-patch-wgp2"
version = "0.1.0"
edition = "2024"
description = "Mini Yonku Let's & Go!! Power WGP2 (SNES) 한글 패치 파이프라인 도구"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
fontdue = "0.9"
png = "0.18"
crc32fast = "1"
md-5 = "0.10"
regex = "1"

[dev-dependencies]
proptest = "1"
tempfile = "3"
